<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardCornerRadius="20dp"
    android:layout_margin="3dp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/circleImageView"
            android:layout_width="@dimen/person_image_width"
            android:layout_height="@dimen/person_image_height"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:src="@drawable/profile1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="16dp"
            android:text="@string/person_name"
            android:textColor="@color/black"
            android:textSize="@dimen/tv_name_textSize"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@id/circleImageView"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            app:circularflow_radiusInDP="20dp"
            android:layout_marginTop="8dp"
            android:text="@string/time"
            app:layout_constraintStart_toEndOf="@id/circleImageView"
            app:layout_constraintTop_toBottomOf="@id/tv_name" />
        <ImageView
            android:id="@+id/post"
            android:layout_width="match_parent"
            android:layout_height="@dimen/imageView_post_height"
            android:src="@drawable/view2"
            app:layout_editor_absoluteY="112dp"
            app:layout_editor_absoluteX="16dp"
            android:scaleType="centerCrop"
            android:layout_marginTop="20dp"
            app:layout_constraintTop_toBottomOf="@id/circleImageView"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent" />
        <View
            android:id="@+id/view1"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginTop="30dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            app:layout_constraintTop_toBottomOf="@id/post"
            />

        <ImageView
            android:id="@+id/imageView2"
            android:layout_width="@dimen/icon_like_width"
            android:layout_height="@dimen/icon_like_height"
            android:layout_marginStart="15dp"
            android:layout_marginTop="7dp"
            android:src="@drawable/icon_like"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/view1" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="9dp"
            android:layout_marginTop="8dp"
            android:text="@string/tv_like"
            android:textSize="@dimen/tv_icon_like_textSize"
            app:layout_constraintStart_toEndOf="@+id/imageView2"
            app:layout_constraintTop_toBottomOf="@+id/view1" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="@dimen/icon_comment_width"
            android:layout_height="@dimen/icon_comment_height"
            android:layout_marginStart="49dp"
            android:layout_marginTop="7dp"
            android:src="@drawable/icon_comment"
            app:layout_constraintStart_toEndOf="@+id/textView"
            app:layout_constraintTop_toBottomOf="@+id/view1" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="9dp"
            android:layout_marginTop="8dp"
            android:text="@string/tv_comment"
            android:textSize="@dimen/tv_icon_comment_textSize"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/view1" />

        <ImageView
            android:id="@+id/imageView3"
            android:layout_width="@dimen/icon_share_width"
            android:layout_height="@dimen/icon_share_height"
            android:layout_marginStart="49dp"
            android:layout_marginTop="7dp"
            android:src="@drawable/icon_share"
            app:layout_constraintStart_toEndOf="@+id/textView2"
            app:layout_constraintTop_toBottomOf="@+id/view1" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="9dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="24dp"
            android:text="@string/tv_share"
            android:textSize="@dimen/tv_icon_share_textSize"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/imageView3"
            app:layout_constraintTop_toBottomOf="@+id/view1" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>